# dcp_ws

documents/: readme.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/apriltag/lib/: libapriltag.so.3  libapriltag.so.3.4.4
install/apriltag/lib/apriltag/cmake/: apriltagTargets-release.cmake
install/apriltag/share/apriltag/: package.sh
install/dh_robotics_ag95_description/share/dh_robotics_ag95_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fairino_action_manager/lib/fairino_action_manager/: task_manager
install/fairino_action_manager/share/fairino_action_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fairino_description/share/fairino_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/fairino_interfaces/share/fairino_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fairino_rviz/share/fairino_rviz/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/isaacsim/lib/isaacsim/: open_isaacsim_stage.py  run_isaacsim.py
install/isaacsim/share/isaacsim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/isaacsim_ros2/lib/isaacsim_ros2/: set_target_pose_client
install/isaacsim_ros2/share/isaacsim_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kimm_hqp_controller/include/kimm_hqp_controller/: config.hpp
install/kimm_hqp_controller/share/kimm_hqp_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kimm_qpoases/share/kimm_qpoases/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kimm_trajectory_smoother/include/kimm_trajectory_smoother/: Path.h  Trajectory.h
install/kimm_trajectory_smoother/share/kimm_trajectory_smoother/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pak_hqp_controller/share/pak_hqp_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotiq_description/share/robotiq_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/fairino/dh_robotics_ag95_description/: CMakeLists.txt
src/fairino/example/: robot_force_sensor_set.cpp
src/fairino/fairino_action_manager/: CMakeLists.txt
src/fairino/fairino_action_manager/include/fairino_action_manager/controller/: controller.hpp
src/fairino/fairino_action_manager/include/fairino_action_manager/servers/basic/: action_server_base.hpp  gripper_real_action_server.hpp  se3_action_server.hpp
src/fairino/fairino_action_manager/include/fairino_action_manager/servers/task/: base_task.hpp
src/fairino/fairino_action_manager/include/fairino_action_manager/simulation/: simulation_isaac.hpp
src/fairino/fairino_action_manager/include/fairino_action_manager/task/: task_manager.hpp
src/fairino/fairino_action_manager/launch/: real_launch.py  simulation_isaac_launch.py
src/fairino/fairino_action_manager/python/: action_client_real.py  action_client_simulation_isaac.py
src/fairino/fairino_action_manager/script/: sensor_data_plot.py
src/fairino/fairino_action_manager/script/ft_sensor_bag/: ft_sensor_bag_0.db3  metadata.yaml
src/fairino/fairino_action_manager/src/controller/: controller.cpp
src/fairino/fairino_action_manager/src/real/: real.cpp
src/fairino/fairino_action_manager/src/servers/basic/: gripper_real_action_server.cpp  gripper_sim_action_server.cpp  joint_posture_action_server.cpp  qr_action_server.cpp  se3_action_server.cpp  tool_changer_action_sever.cpp
src/fairino/fairino_action_manager/src/servers/task/: base_task.cpp  pick.cpp  place.cpp
src/fairino/fairino_action_manager/src/simulation/: simulation_isaac.cpp
src/fairino/fairino_action_manager/src/task/: task_manager.cpp
src/fairino/fairino_description/urdf/: fairino5_v6.urdf  fr5_with_ag95.urdf
src/fairino/fairino_interfaces/: CMakeLists.txt
src/fairino/fairino_interfaces/action/: SE3.action
src/fairino/fairino_rviz/: CMakeLists.txt
src/fairino/fairino_rviz/rviz2/: fr5.rviz
src/fairino/isaacsim_ros2/: package.xml  setup.cfg  setup.py
src/fairino/isaacsim_ros2/isaacsim_ros2/: action_graph.py  dcp.py  dcp_no_camera.py
src/fairino/kimm_hqp_controller/: CMakeLists.txt
src/fairino/kimm_qpoases/: CMakeLists.txt
src/fairino/kimm_trajectory_smoother/: CMakeLists.txt  package.xml
src/fairino/libfairino/include/: robot.h  robot_error.h  robot_types.h
src/fairino/libfairino/lib/: libfairino.so.2  libfairino.so.2.1.7
src/fairino/pak_hqp_controller/: CMakeLists.txt  package.xml
src/fairino/pak_hqp_controller/include/pak_hqp_controller/controller/: controller.hpp
src/fairino/pak_hqp_controller/include/pak_hqp_controller/robot/: robot_wrapper.hpp
src/fairino/pak_hqp_controller/include/pak_hqp_controller/task/: constraint_base.hpp  task_base.hpp  task_only_yaw_free.hpp  task_parallel_grasp.hpp  task_se3_equality.hpp
src/fairino/pak_hqp_controller/src/controller/: controller.cpp
src/fairino/pak_hqp_controller/src/robot/: robot_wrapper.cpp
src/fairino/pak_hqp_controller/src/solver/: solver.cpp
src/fairino/pak_hqp_controller/src/task/: task_only_yaw_free.cpp  task_parallel_grasp.cpp  task_se3_equality.cpp
src/fairino/robotiq_description/urdf/: fairino5_v6_2f_140.urdf  robotiq_2f_140_gripper.urdf
(+529 files in other folders)
